i added some shit

--- a/amith.html
+++ b/amith.html
@@ -7,7 +7,66 @@
     <title>Document</title>
 </head>
 
+<style>
+    h1 {
+        text-align: center;
+
+    }
+
+    .column1 {
+        float: left;
+        margin-left: 100px;
+    }
+
+    .column2 {
+        float: right;
+        margin-right: 100px;
+    }
+
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+
+    }
+</style>
+
 <body>
+
+    <h1>pushing to github</h1>
+
+    <div class="row">
+        <div class="column1">
+            <h1>life sucks</h1>
+        </div>
+
+        <div class="column2">
+            <h1>life is fucked up</h1>
+        </div>
+
+    </div>
+
+
+    <p>
+        Mahatma Gandhi
+
+        Mohandas Gandhi, known as Mahatma Gandhi.
+        Also known as Mahatma the great soul, was the "father of modern India".
+        He originally came from Western India, a city called Porbandar.
+        He was born on 2nd October 1869. Gandhi was on of the youngest of the three sons of Karamchand Gandhi, who was a
+        Prime Minister successively in Porbandar, Rajkot and Vankaner States. Gandhi's mother was Putlibai, Karamchand
+        Gandhi's fourth wife.
+
+        In 1876 he attended a primary school in Rajkot until the twelfth year.
+        Later on he was engaged to Kasturbai.
+        In 1881 Gandhi want on to do further education in a high school (in Rajkot). Two years later in 1883 he marries
+        Kasturbai. In 1887 Gandhi joins Samaldas…show more content…
+        He fasted until the rioters promised peace to him.
+        A Hindu who had been angered by the Mahatma's efforts to settle Hindus
+        and Muslims.
+    </p>
+
+
 
 </body>
 
