--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
-<style>
-   
-</style>
-
 <body>
-
-
+    
+    <h1>This is for jenkins Learning purpose</h1>
 
 </body>
-    
 </html>
